[gd_scene load_steps=9 format=3 uid="uid://cl5xgj3gl7wiq"]

[ext_resource type="Script" uid="uid://bhmjyyphn42sm" path="res://scripts/item_info.gd" id="1_wvbq2"]
[ext_resource type="Texture2D" uid="uid://b61hj2na4tvs4" path="res://assets/panel.png" id="2_p6qju"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nctrx"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
texture = ExtResource("2_p6qju")
region_rect = Rect2(0, 0, 3, 3)

[sub_resource type="Gradient" id="Gradient_wvbq2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p6qju"]
gradient = SubResource("Gradient_wvbq2")
width = 1

[sub_resource type="Gradient" id="Gradient_p6qju"]
offsets = PackedFloat32Array(0.434043, 0.570213)
colors = PackedColorArray(1, 0.831373, 0.321569, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wvbq2"]
gradient = SubResource("Gradient_p6qju")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="FontVariation" id="FontVariation_p6qju"]
spacing_glyph = 4

[node name="ItemInfo" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_wvbq2")
common_color = Color(1, 1, 1, 1)
uncommon_color = Color(0, 0, 1, 1)
rare_color = Color(1, 1, 0, 1)
epic_color = Color(0.443, 0, 1, 1)

[node name="TheContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_right = 231.0
offset_bottom = 116.0
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nctrx")

[node name="TextureRect" type="TextureRect" parent="TheContainer"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_p6qju")

[node name="Information" type="MarginContainer" parent="TheContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="TheContainer/Information"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TheContainer/Information/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="TheContainer/Information/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 14
text = "The mega crunch ability"

[node name="PriceContainer" type="HBoxContainer" parent="TheContainer/Information/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 2

[node name="Price" type="Label" parent="TheContainer/Information/VBoxContainer/HBoxContainer/PriceContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "000"

[node name="Coin" type="TextureRect" parent="TheContainer/Information/VBoxContainer/HBoxContainer/PriceContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture = SubResource("GradientTexture2D_wvbq2")

[node name="Rarity" type="Label" parent="TheContainer/Information/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 2, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_p6qju")
theme_override_font_sizes/font_size = 9
text = "UNCOMMON"

[node name="RarityGlow" type="Label" parent="TheContainer/Information/VBoxContainer/Rarity"]
unique_name_in_owner = true
modulate = Color(1, 1, 2, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -5.5
offset_right = 55.0
offset_bottom = 5.5
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_p6qju")
theme_override_font_sizes/font_size = 9
text = "UNCOMMON"

[node name="HSeparator" type="HSeparator" parent="TheContainer/Information/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="TheContainer/Information/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(176, 0)
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 12
text = "anither damage nighbor but different anither damage nighbor but different anither damage "
autowrap_mode = 2
